# rustom-mastodon-bot

./: .gitignore  Cargo.toml  sample_config.json  sentence_patterns  shell.nix  words.json
.github/workflows/: build.yaml  nonix-build-arm.yaml  nonix-build.yaml
src/: config.rs  io.rs  main.rs  mastodon.rs  pattern_parser.rs  sentence.rs
