[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.29"
megalodon = "0.11.6"
runtime = "0.0.0"
serde = "1.0.190"
serde_derive = "1.0.190"
serde_json = "1.0.108"
tokio = "1.35.0"
