[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
futures = "0.3.29"
megalodon = "0.11.6"
rand = "0.8.5"
runtime = "0.0.0"
serde = "1.0.190"
serde_derive = "1.0.190"
serde_json = "1.0.108"
timer = "0.2.0"
tokio = "1.35.0"
